--- a/app/src/main/res/layout/activity_encryption.xml
+++ b/app/src/main/res/layout/activity_encryption.xml
@@ -6,28 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!--    <androidx.appcompat.widget.Toolbar-->
-    <!--        android:id="@+id/toolbar"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:background="?attr/colorPrimary"-->
-    <!--        android:minHeight="?attr/actionBarSize"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        app:titleTextColor="@android:color/white"-->
 
-    <!--        />-->
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edEncryptText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:hint="@string/enter_text_for_encrypt"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivImage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,9 +26,10 @@
         android:hint="@string/enter_the_key"
         android:maxLength="8"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edEncryptText" />
+        app:layout_constraintTop_toBottomOf="@id/ivImage" />
 
 
     <androidx.appcompat.widget.AppCompatButton
@@ -53,31 +40,22 @@
         android:padding="4dp"
         android:text="@string/encrypt"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edEncryptKey" />
 
-    <TextView
-        android:id="@+id/tvEncryptOutput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnEncryptKey" />
-
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnCopy"
+        android:id="@+id/btnSelectImageFromGallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="@string/copy"
+        android:padding="16dp"
+        android:text="@string/select_image_for_gallery"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvEncryptOutput" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
