fix - aes encription

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#89DA28</color>
     <color name="colorPrimaryDark">#407105</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="blackDark">#FF202020</color>
 </resources>
